backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: backend
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - envFrom:
            - secretRef:
                name: mysql-secret
          image: registry.dev.estishraf.gov.sa/coop/backend:latest
          imagePullPolicy: Always
          name: semantic-backend
          ports:
            - containerPort: 5002
              protocol: TCP
      restartPolicy: Always
