chroma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: chroma
  name: chroma
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chroma
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: chroma
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - env:
            - name: IS_PERSISTENT
              value: "TRUE"
            - name: PERSIST_DIRECTORY
              value: /data
          image: registry.dev.estishraf.gov.sa/coop/chroma:latest
          name: semantic-chroma
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: chroma-data
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 15
      restartPolicy: Always
      volumes:
        - name: chroma-data
          persistentVolumeClaim:
            claimName: chroma-data
