mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: mysql-db
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: mysql-db
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - envFrom:
            - secretRef:
                name: mysql-secret
          image: registry.dev.estishraf.gov.sa/coop/mysql:8.0
          imagePullPolicy: Always
          name: database-mysql
          args:
            - "--default-authentication-plugin=mysql_native_password"
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
              subPath: mysql-data-v3
          startupProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 45
            periodSeconds: 15
            failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
