ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: ollama
    spec:
      containers:
        - image: ollama/ollama:latest
          name: semantic-ollama
          ports:
            - containerPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-data
      restartPolicy: Always
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-data
