backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  type: NodePort
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5002
      nodePort: 30081
  selector:
    io.kompose.service: backend
