ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  ports:
    - name: "11434"
      port: 11434
      targetPort: 11434
  selector:
    io.kompose.service: ollama
