ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-semantic-search-ingress
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/use-regex: "true"
  #   nginx.ingress.kubernetes.io/proxy-body-size: "100m"
  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - coop.ingress.dev.estishraf.gov.sa
      secretName: internal-tls-secret
  rules:
    - host: coop.ingress.dev.estishraf.gov.sa
      http:
        paths:
          # Frontend React UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3001

          # Backend Flask API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5001
